--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,23 +2,51 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .container {
+    @apply px-4  sm:px-7 md:max-w-full md:px-[15px] lg:px-[15px] xl:px-[80px] 2xl:max-w-[1372px] 2xl:px-0 sm:max-w-xl mx-auto;
+  }
+}
+
 .light {
   --background: 241, 245, 249;
   --border: 226, 232, 240;
+  --btn: 28, 171, 85;
   --card: 255, 255, 255;
-  --copy-primary: 100, 116, 139;
+  --copy-primary: 0, 0, 0;
   --copy-secondary: 100, 116, 139;
   --input: 46, 58, 71;
+  --hero-bg: 0, 0, 0;
   background: rgba(var(--background));
   color: rgba(var(--copy-secondary));
 }
 .dark {
   --background: 26, 34, 44;
+  /* --background: 0, 0, 0; */
   --border: 46, 58, 71;
+  --btn: 56, 181, 162;
   --card: 36, 48, 63;
   --copy-primary: 250, 250, 250;
   --copy-secondary: 100, 116, 139;
   --input: 46, 58, 71;
+  --hero-bg: rgba(var(--background));
   background: rgba(var(--background));
   color: rgba(var(--copy-secondary));
+}
+
+.clip-rhombus {
+  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+}
+
+.spin {
+  animation: spin 5s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
